--- a/css/styles.css
+++ b/css/styles.css
@@ -83,7 +83,7 @@ body {
     border-radius: 4px;
     border: 2px solid #fff;
     color: #fff;
-    background-color: #b55436;
+    background-color: #67686c;
     padding: 15px 0;
     transition: .5s;
 }
